# wildfire-sim

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  wildfire_sim
include/: Cell.h  FireSimulation.h  FirefightingCrew.h  Grid.h
src/: Cell.cpp  FireSimulation.cpp  FirefightingCrew.cpp  Grid.cpp  main.cpp
